--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
+PORT = 5000
 CONNECTION_URL = mongodb+srv://sivasindhu:sivasinp@cluster0.r3gkt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
