--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client1",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://memories-server-app.vercel.app/",
+  "proxy": "https://memories-server-app.vercel.app",
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
