--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/react": "^18.3.8",
+    "@types/react": "^17.0.82",
     "axios": "^1.7.7",
     "moment": "^2.30.1",
     "npm": "^10.8.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
     "react-number-format": "^5.4.2",
     "react-redux": "^9.1.2",
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider next build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -53,9 +53,14 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-private-property-in-object": "^7.24.7",
-    "ajv": "^7.2.4"
+    "ajv": "^7.2.4",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4"
   },
   "resolutions": {
-  "@types/react": "18.0.0"
-}
+    "@types/react": "18.0.0"
+  },
+  "engines": {
+    "node": "16.x"
+  }
 }
